src/style.css
/* CSS RESET
______________________________________________________________________________________
*/
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

html,
body {
    height: 100%;
}

body {
    line-height: 1.5;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}
/* 
______________________________________________________________________________________ 
*/

@font-face {
    font-family: Inconsolata;
    font-style: normal;
    font-weight: 100 900;
    font-display: swap;
    src: url("/fonts/inconsolata/Inconsolata-VariableFont_wdth\,wght.ttf")
        format("truetype");
}

@font-face {
    font-family: Inter;
    font-style: normal;
    font-weight: 100 900;
    font-display: swap;
    src: url("/fonts/inter/Inter-VariableFont_slnt\,wght.ttf")
        format("truetype");
}

@font-face {
    font-family: Lora;
    font-style: normal;
    font-weight: 100 900;
    font-display: swap;
    src: url("/fonts/lora/Lora-VariableFont_wght.ttf") format("truetype");
}

@font-face {
    font-family: Lora;
    font-style: italic;
    font-weight: 100 900;
    font-display: swap;
    src: url("/fonts/lora/Lora-Italic-VariableFont_wght.ttf") format("truetype");
}

:root {
    /* fonts */
    --ff-sans-serif: Inter, sans-serif;
    --ff-serif: Lora, serif;
    --ff-mono: Inconsolata, monospace;
    --fs-heading-l: 64px;
    --fs-heading-m: 24px;
    --fs-heading-s: 20px;
    --fs-body-m: 18px;
    --fs-body-s: 14px;
    --fw-normal: normal;
    --fw-bold: 600;
    --fw-boldest: 800;
    /* dark mode */
    --color-dark-bg: #070707;
    --color-dark-primary: #ffffff;
    --color-dark-primary-light: #bbbbbb;
    /* colors */
    --color-primary: #2d2d2d;
    --color-primary-light: #757575;
    --color-primary-lightest: #f4f4f4;
    --color-accent: #a445ed;
    --color-error: #ff5252;
    --color-bg: #ffffff;
}

body {
    font-family: var(--ff-sans-serif);
    background-color: var(--color-bg);
    color: var(--color-primary);
    width: 100vw;
    max-width: 800px;
    margin: 0 auto;
    padding: 1rem;
    font-size: var(--fs-body-m);
    transition: background-color 400ms ease-in-out;
}

h2 {
    font-size: var(--fs-heading-m);
    font-weight: var(--fw-bold);
    font-style: italic;
}

h3 {
    font-size: var(--fs-heading-s);
    font-weight: var(--fw-normal);
    color: var(--color-primary-light);
}

h4 {
    display: none;
    color: var(--color-primary-light);
    font-size: var(--fs-body-s);
}

li {
    padding-bottom: 0.75rem;
}

li::marker {
    color: var(--color-accent);
}

hr {
    height: 0;
    border: 2px solid var(--color-primary-lightest);
}

#root {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.header {
    user-select: none;
    display: flex;
    height: 38px;
    justify-content: space-between;
    align-items: center;
    color: var(--color-primary);
    padding: 2rem 0;
}

.nav-right {
    display: flex;
    align-items: center;
    gap: 1.5rem;
}

/* font selection dropdown */

.select-container {
    display: flex;
    gap: 0.5rem;
    position: relative;
    cursor: pointer;
}

.select-modal {
    display: hidden;
    pointer-events: none;
    position: absolute;
    background-color: var(--color-primary-lightest);
    border: 1px solid var(--color-accent);
    border-radius: 1rem;
    color: var(--color-primary);
    font-weight: bold;
    width: 150px;
    top: 150%;
    flex-direction: column;
    gap: 0.25rem;
    padding: 1rem;
    opacity: 0;
    translate: 0 -25%;
    z-index: 1;
    transition: opacity 200ms ease-in-out, translate 200ms ease-in-out;
}

.select-modal.active {
    display: flex;
    pointer-events: auto;
    opacity: 1;
    translate: 0 0;
}

.select-current {
    width: 100px;
    font-weight: var(--fw-bold);
}

.select-modal-item#sans-serif {
    font-family: var(--ff-sans-serif);
}

.select-modal-item#serif {
    font-family: var(--ff-serif);
}

.select-modal-item#mono {
    font-family: var(--ff-mono);
}

.select-modal-item.selected {
    color: var(--color-accent);
}

/* dark mode */

.dark-mode {
    display: flex;
    align-items: center;
    width: 60px;
    font-size: var(--fs-body-s);
    gap: 0.5rem;
    cursor: pointer;
    transition: filter 200ms ease-in-out;
}

.dark-mode:hover {
    filter: brightness(0.7);
}

.dark-mode svg {
    fill: var(--color-accent);
    fill-opacity: 0;
    transition: fill-opacity 200ms ease-in-out;
}

.dark-mode svg.active {
    fill-opacity: 1;
}

.dark-mode p {
    font-weight: var(--fw-bold);
    color: var(--color-primary-light);
    transition: color 200ms ease-in-out;
}

.dark-mode p.active {
    color: var(--color-accent);
}

/* search */

.searchbar {
    position: relative;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

.searchbar input {
    outline: none;
    border: 1px solid var(--color-primary-light);
    background-color: var(--color-primary-lightest);
    border-radius: 1rem;
    padding: 0.5rem 1rem;
    width: 100%;
    height: 40px;
    font-size: var(--fs-body-s);
    color: var(--color-primary-light);
    transition: border 200ms ease-in-out;
}

.searchbar input.invalid {
    border: 1px solid var(--color-error);
}

.searchbar input.transition {
    background-color: aqua;
}

.searchbar input:focus:not(.invalid),
.searchbar input:hover:not(.invalid) {
    border: 1px solid var(--color-accent);
}

.searchbar button {
    position: absolute;
    top: 10px;
    right: 10px;
    border: none;
    background-color: var(--color-primary-lightest);
}

.error-text {
    user-select: none;
    color: var(--color-error);
    font-size: var(--fs-body-s);
    font-weight: var(--fw-bold);
    padding-left: 2rem;
    padding-top: 0.25rem;
    opacity: 0;
    translate: -5% 0;
    transition: opacity 100ms ease-in-out, translate 100ms ease-in-out;
}

.error-text.active {
    opacity: 1;
    translate: 0 0;
}

/* main */
.main {
    width: 90%;
    margin-left: 0px;
    padding-bottom: 1.5rem;
}
/* main head */
.main-head {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 1rem;
}

.head-left h1 {
    font-size: var(--fs-heading-l);
    font-weight: var(--fw-boldest);
    line-height: 77px;
}

.pronounciation {
    font-size: var(--fs-heading-m);
    font-weight: var(--fw-normal);
    color: var(--color-accent);
}

.play-button {
    border: none;
    background-color: var(--color-bg);
    width: fit-content;
    height: fit-content;
    border-radius: 100%;
    overflow: hidden;
    cursor: pointer;
    transition: background-color 400ms ease-in-out;
}

.play-button svg {
    width: 50px;
    height: 50px;
}

.play-button svg g:not(.disabled):hover {
    filter: brightness(1.2);
}

.play-button svg g {
    transition: fill 200ms ease-in-out, filter 200ms ease-in-out;
}

.play-button svg g.disabled {
    fill: var(--color-primary);
}

/* main body */

.noun-divider,
.verb-divider {
    display: flex;
    align-items: center;
    margin-bottom: 40px;
    gap: 1rem;
}

.body-noun-container h3,
.body-verb-container h3 {
    margin-bottom: 1.5rem;
}

.divider {
    flex-grow: 1;
    height: 0px;
    border-top: 1px solid var(--color-primary-lightest);
}

.synonyms-container {
    display: flex;
    align-items: center;
    margin: 2rem 0;
}

.synonyms-container h3 {
    margin-bottom: 0;
}

.synonyms {
    display: flex;
    align-items: center;
    padding-inline-start: 1rem;
}
.synonyms li {
    list-style: none;
    padding: 0 1rem;
}

.synonyms p {
    color: var(--color-accent);
    font-size: var(--fs-heading-s);
    font-weight: var(--fw-bold);
    text-decoration: none;
}

/* main footer */

.main-footer {
    margin-top: 1rem;
    display: flex;
    gap: 1rem;
    font-size: var(--fs-body-s);
    align-items: center;
}
.main-footer a {
    color: var(--color-primary-light);
}

@media screen and (min-width: 800px) {
    .main {
        margin-left: 60px;
    }
}

@media screen and (min-width: 376px) {
    .play-button svg {
        width: 75px;
        height: 75px;
    }

    .searchbar {
        margin-top: 3rem;
        margin-bottom: 2rem;
    }

    h4 {
        display: inline;
    }
}

